# mini-llama-3

./: .gitignore  Dockerfile  LICENSE  README.md
checkpoints/: test_models.py
dataset/: tiny_stories.py
datasets/: arrr.py  tiny_stories.py
datasets/jack-sparrow/: reader.py
model/: __init__.py  bindings.cpp  setup.py
model/attention/: attention.cu  attention.h  attention.py  tests.py
model/attention/tests/: test_multi_attention.py  test_single_attention.py
model/cuda/: bindings.cpp
model/cuda/attention/: attention.cu  attention.h
model/cuda/embedding/: embedding.cu  embedding.h  tests.py
model/cuda/linear/: linear.cu  tests.py
model/embedding/: embedding.cu  embedding.h  setup.py  tests.py
model/embeddings/: embeddings.cpp  embeddings.cu  embeddings.h  embeddings.py  tests.py
model/linear/: bindings.cpp  linear.cpp  linear.cu  linear.h  linear.py  mnist_test.py  tests.py
model/mlp/: mlp.py
model/rmsnorm/: rmsnorm.py
model/rope/: rope.py
model/sdpattention/: attention.py
model/src/mini_llama/: __init__.py  training.py
model/src/tokenizers/: pirate_tokenizer_1K.json  pirate_tokenizer_2K.json  pirate_tokenizer_4K.json  pirate_tokenizer_8K.json  test_tokenizer.py  tokenize_dataset.py  train_tokenizer.py
model/src/tokenizers/rust_tokenizer/: Cargo.toml  __init__.py
model/src/tokenizers/rust_tokenizer/src/: lib.rs
model/src/training/: tiny_stories.py  training.py
tokenizer/: tokenizer.json  tokenizer.py
website/frontend/: package-lock.json  package.json
website/frontend/public/: index.html
website/server/: stream_generation.py
(+57 files in other folders)
