[package]
name = "rust_tokenizer"
version = "0.1.0"
edition = "2021"

[lib]
name = "rust_tokenizer"
crate-type = ["cdylib"]

[dependencies]
pyo3 = { version = "0.19", features = ["extension-module", "abi3-py311"] }
rayon = "1.7"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"
indicatif = "0.17"
log = "0.4"
env_logger = "0.10"